--- a/style/style.css
+++ b/style/style.css
@@ -81,9 +81,12 @@ body {
   color: #201b1b;
   padding: 2rem;
   border-radius: 10px;
-  border: 2px transparent;
+  border: 2px solid #6666;
   outline: none;
   padding-bottom: 8rem;
   
-  
+}
+hr {
+  width: 70%;
+  border: 1px solid #6666;
 }
