--- a/public/style/style.css
+++ b/public/style/style.css
@@ -4,13 +4,16 @@
 }
 body {
   
-  padding: 22px;
+  display: flex;
+  flex-direction: column;
+  padding: 8rem;
+  align-items: center;
   background-color: #91cbde;
   
 }
 .container {
   height: 100%;
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,8 +25,11 @@ body {
   border: 3px solid #d30707;
 
   background-image:url('../images/back2.png');
-  background-size: 600px 280px;
+  background-size: 910px 280px;
   background-repeat: no-repeat;
+  
+  
+  
 
 
 
@@ -36,7 +42,7 @@ body {
 
   
 }
-.top_container section{
+.top_container {
   display: flex;
   flex-direction: column;
   justify-items: center;
@@ -44,14 +50,14 @@ body {
   
 }
 .avatar {
-  
+   
   width: 100px;
   height: 100px;
   
   border-radius: 100%;
   box-shadow: 0 8px 16px -8px rgba(0, 0, 0, 0.5);
   margin: 2rem 0 1rem;
-  justify-self: center;
+  
 }
 
 .top_container select {
@@ -75,7 +81,7 @@ body {
   
   background-color: aliceblue;
   background-image:url('../images/back_rodape1.png');
-  /* background-size: 500px 500px; */
+  background-size: 910px 500px;
   background-repeat: no-repeat;
   width: 100%;
   height: 26.1rem;
@@ -123,6 +129,7 @@ body {
   
   
 }
+
 
 /* iPhone 5 */
 /* @media(max-width: 320px){
@@ -185,4 +192,5 @@ body {
     height: 480px;
     width: 280px;
   }
-} */
+}
+*/
