--- a/public/style/style.css
+++ b/public/style/style.css
@@ -6,14 +6,14 @@ body {
   
   display: flex;
   flex-direction: column;
-  padding: 8rem;
   align-items: center;
+  padding: 8rem;
   background-color: #91cbde;
   
 }
 .container {
-  height: 100%;
-  width: 100%;
+  height: 680px;
+  width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,7 +25,7 @@ body {
   border: 3px solid #d30707;
 
   background-image:url('../images/back2.png');
-  background-size: 910px 280px;
+  background-size: 510px 280px;
   background-repeat: no-repeat;
   
   
@@ -81,7 +81,7 @@ body {
   
   background-color: aliceblue;
   background-image:url('../images/back_rodape1.png');
-  background-size: 910px 500px;
+  background-size: 610px 420px;
   background-repeat: no-repeat;
   width: 100%;
   height: 26.1rem;
